[gd_scene load_steps=3 format=3 uid="uid://xndd7r8jpai5"]

[ext_resource type="Script" uid="uid://cyknkckeohkmb" path="res://sources/menus/splash_screen/splash_screen.gd" id="1_6qhsg"]
[ext_resource type="Texture2D" uid="uid://r0hp4q240rhv" path="res://assets/splash.jpg" id="2_evh4b"]

[node name="SplashScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6qhsg")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SplashImage" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1792.0
texture = ExtResource("2_evh4b")
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="ready" from="Timer" to="." method="_on_timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
